erDiagram
    USERS {
        bigint id PK
        string email
        string account_status
        string kyc_status
        string trust_level
    }

    USER_PROFILES {
        bigint user_id PK,FK
        string full_name
        string avatar_url
    }

    ROLES {
        bigint id PK
        string code
    }

    PERMISSIONS {
        bigint id PK
        string name
    }

    USER_ROLES {
        bigint user_id FK
        bigint role_id FK
    }

    ROLE_PERMISSIONS {
        bigint role_id FK
        bigint permission_id FK
    }

    SHIPPING_ADDRESSES {
        bigint id PK
        bigint user_id FK
        string receiver_name
        string receiver_phone
        string full_address
    }

    CATEGORIES {
        bigint id PK
        string code
        string name
    }

    PRODUCTS {
        bigint id PK
        bigint category_id FK
        string name
        decimal sale_price
        decimal rent_price_per_day
        int quantity
        int rental_quantity
    }

    DEVICES {
        bigint id PK
        bigint product_id FK
        string serial_number
        string status
    }

    CART_ITEMS {
        bigint id PK
        bigint user_id FK
        bigint product_id FK
        int quantity
    }

    ORDERS {
        bigint id PK
        bigint user_id FK
        string code
        decimal total_price
        string status
        string payment_status
        string voucher_code
    }

    ORDER_ITEMS {
        bigint id PK
        bigint order_id FK
        bigint product_id FK
        int quantity
        decimal unit_price
        decimal subtotal
    }

    RENTAL_ORDERS {
        bigint id PK
        bigint user_id FK
        string code
        datetime start_date
        datetime end_date
        string status
        decimal rental_fee
        decimal final_deposit_amount
        string payment_status
    }

    RENTAL_ORDER_ITEMS {
        bigint id PK
        bigint rental_order_id FK
        bigint product_id FK
        bigint device_id FK
        decimal price_per_day
    }

    RENTAL_CONTRACTS {
        bigint id PK
        bigint rental_order_id FK
        string contract_number
        string status
        string document_hash
    }

    RENTAL_HANDOVER_REPORTS {
        bigint id PK
        bigint rental_order_id FK
        bigint staff_id FK
        decimal final_deposit_amount
    }

    RENTAL_RETURN_REPORTS {
        bigint id PK
        bigint rental_order_id FK
        bigint staff_id FK
        decimal late_fee
        decimal damage_fee
        decimal refund_amount
    }

    USER_IDENTITIES {
        bigint id PK
        bigint user_id FK
        string identity_number
        string identity_verification_status
    }

    VERIFICATION_SESSIONS {
        bigint id PK
        bigint user_id FK
        string status
        string verification_type
    }

    PAYMENT_TRANSACTION_LOGS {
        bigint id PK
        bigint order_id FK
        string provider
        string status
        decimal amount
        string transaction_id
    }

    REVIEWS {
        bigint id PK
        bigint user_id FK
        bigint product_id FK
        bigint order_id FK
        int rating
    }

    SUPPORT_TICKETS {
        bigint id PK
        bigint processed_by_id FK
        string email
        string subject
        string status
    }

    USERS ||--|| USER_PROFILES : "has"
    USERS ||--o{ SHIPPING_ADDRESSES : "has"
    USERS ||--o{ USER_ROLES : "assigned"
    ROLES ||--o{ USER_ROLES : "contains"
    ROLES ||--o{ ROLE_PERMISSIONS : "grants"
    PERMISSIONS ||--o{ ROLE_PERMISSIONS : "included"

    CATEGORIES ||--o{ PRODUCTS : "contains"
    PRODUCTS ||--o{ DEVICES : "has"

    USERS ||--o{ CART_ITEMS : "has cart"
    PRODUCTS ||--o{ CART_ITEMS : "in cart"

    USERS ||--o{ ORDERS : "places"
    ORDERS ||--o{ ORDER_ITEMS : "contains"
    PRODUCTS ||--o{ ORDER_ITEMS : "sold"
    ORDERS ||--o{ PAYMENT_TRANSACTION_LOGS : "payment logs"

    USERS ||--o{ RENTAL_ORDERS : "creates"
    RENTAL_ORDERS ||--o{ RENTAL_ORDER_ITEMS : "contains"
    PRODUCTS ||--o{ RENTAL_ORDER_ITEMS : "rented"
    DEVICES ||--o{ RENTAL_ORDER_ITEMS : "assigned"

    RENTAL_ORDERS ||--|| RENTAL_CONTRACTS : "has contract"
    RENTAL_ORDERS ||--|| RENTAL_HANDOVER_REPORTS : "has handover"
    RENTAL_ORDERS ||--|| RENTAL_RETURN_REPORTS : "has return"
    USERS ||--o{ RENTAL_HANDOVER_REPORTS : "staff handles"
    USERS ||--o{ RENTAL_RETURN_REPORTS : "staff checks"

    USERS ||--|| USER_IDENTITIES : "verified identity"
    USERS ||--o{ VERIFICATION_SESSIONS : "starts"

    USERS ||--o{ REVIEWS : "writes"
    PRODUCTS ||--o{ REVIEWS : "receives"
    ORDERS ||--o{ REVIEWS : "source"

    USERS ||--o{ SUPPORT_TICKETS : "processes"